Aggiustamenti del codice
Rimossa l'intera configurazione di persistenza JPA (incluse @Inheritance e @ManyToMany).