@@ -18,8 +18,8 @@ public class PacchettoService {
     @Autowired
     private UtenteRepository utenteRepository;
 
-    public void creaPacchetto(String nome, String descrizione, int quantita, String idDistributore, List<Prodotto> prodotti) {
-        Optional<UtenteLoggato> distributore = utenteRepository.findById(idDistributore);
+    public void creaPacchetto(String nome, String descrizione, int quantita, String idVenditore, List<Prodotto> prodotti) {
+        Optional<UtenteLoggato> distributore = utenteRepository.findById(idVenditore);
         if(distributore.get().getRuolo() != RuoloUtente.DISTRIBUTORE)
             throw new IllegalArgumentException("Impossibile creare il pacchetto!");
         for(Prodotto p : prodotti) {
@@ -27,10 +27,10 @@ public class PacchettoService {
                 if(prodottoSingolo.getStatoProdotto() != StatoProdotto.APPROVATO)
                     throw new IllegalArgumentException("Impossibile creare il pacchetto!");
         }
-        PacchettoProdotti pacchetto = new PacchettoProdotti(nome, descrizione, quantita, idDistributore, prodotti);
-        List<PacchettoProdotti> temp = pacchettoRepository.findByNomeAndPrezzoTotaleAndIdDistributore(nome, pacchetto.getPrezzo(), idDistributore);
+        PacchettoProdotti pacchetto = new PacchettoProdotti(nome, descrizione, quantita, idVenditore, prodotti);
+        List<PacchettoProdotti> temp = pacchettoRepository.findByNomeAndPrezzoAndIdVenditore(nome, pacchetto.getPrezzo(), idVenditore);
         if(!temp.isEmpty())
-            if(temp.getFirst().equals(pacchetto))
+            if(temp.get(0).equals(pacchetto))
                 throw new IllegalArgumentException("Pacchetto esistente!");
         pacchettoRepository.save(pacchetto);
     }
